--- a/style.css
+++ b/style.css
@@ -70,6 +70,11 @@ p{
     box-shadow: 0px 0px 100px 50px #881a9e;
 }
 
+.fortnite{
+    box-shadow: 0px 0px 100px 50px #9e1a63;
+}
+
+
 
 .image img{
     width: 100%;
